--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "vehicle-rent-service",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   },
   "husky": {
     "hooks": {
@@ -33,6 +35,9 @@
     "prettier": "^3.5.3"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "@prisma/client": "^6.8.2",
+    "body-parser": "^2.2.0",
+    "express": "^5.1.0",
+    "prisma": "^6.8.2"
   }
 }
