--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@prisma/client": "^6.8.2",
     "body-parser": "^2.2.0",
     "express": "^5.1.0",
-    "prisma": "^6.8.2"
+    "prisma": "^6.8.2",
+    "zod": "^3.25.42"
   }
 }
